index.css
/* Cloud parameters */
:root {
    --cloud-size: 50vw;
    --cloud-period: 45000ms;
    --cloud-fluffy: 2em;
    --cloud-bright: #FFF;
    --cloud-dim: #BBB;
    /* --cloud-dim: #ffee96ff;
    --cloud-bright: #f5753677; */
}

* {
    margin: 0;
    padding: 0;
}

html {
    scroll-behavior: smooth;
    /* background: linear-gradient(180deg,
        #2d282e 0%,
        #215c9a 10%,
        #2791d5 20%,
        #4fa7e2 50%,
        
        #f3f5f9 75%,
        #f5f7f7 80%,
        #ffee96 85%,
        #f6b65e 90%,
        #f57536 95%,
        #2d282e 100%,
        #2d282e 100%
    ); */
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 1.25em;
    background-color: #2d282e;
}

header {
    width: 100%;
    height: 100vh;
    background: linear-gradient(180deg,
        #2d282e 0%,
        #215c9a 20%,
        #2791d5 40%,
        #4fa7e2 100%
    );
}
header > div.title {
    position: sticky;
    top: 20vh;
    margin-left: 20vw; /* left: 20vw; */
    z-index: 2;
}
/* add cloud in front */
header img {
    position: absolute;
    top: 35vh;
    left: 20vw;
    z-index: 4;
    width: 60vw;
    height: auto;
    animation-duration: 5000ms;
    animation-name: floating;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    animation-direction: alternate-reverse;
}
@keyframes floating {
    from {margin-top: 0vh;}
    50% {margin-top: 2vh;}
    to {margin-top: 0vh;}
}
/* add cloud in back */
/* maybe cloud should stick the whole way down and change color as sun sets...*/

main {
    padding: 2em;
    background: linear-gradient(180deg,
        #4fa7e2 0%,
        #f3f5f9 100%
    );
}

section {
    max-width: 50em;
    padding: 2em;
    margin: auto;
    /* padding-bottom: 0; */

    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 2em;
    align-items: center;
}

section > span, section > div {
    background-color: aliceblue;
    color: navy;
    padding: 1em;
    border-radius: 1em;
    border-style: solid;
    border-width: 0 0.5rem 0.5rem 0;
    border-radius: 2em;
    /* border-color: #f57536; */
    border-color: #ffee96;
}

section > div {
    grid-column: 1 / 3;
}

section > h2 {
    justify-self: center;
    grid-row: 1 / 2;
    grid-column: 1 / 3;
}

section > svg {
    width: 100%;
}

section > img {
    width: 20em;
}

footer {
    background: linear-gradient(180deg,
        #f3f5f9 0%,
        #f5f7f7 15%,
        #ffee96 30%,
        #f6b65e 45%,
        #f57536 60%,
        #2d282e 90%,
        #2d282e 100%
    );
}

footer > img {
    position: relative;
    left: 5%;
    width: 90%;
    height: auto;
}

h1 {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color:#ffee96;
    font-style: bold, italic;
    font-size: 4em;
    text-shadow: 
        #f57536 1px 1px,
        #f57536 2px 2px,
        #f57536 3px 3px,
        #f57536 4px 4px,
        #f57536 5px 5px,
        #f57536 6px 6px;
}

h2 {
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color:#ffee96;
    font-style: bold, italic;
    font-size: 2em;
    text-shadow:
        #f57536 1px 1px,
        #f57536 2px 2px,
        #f57536 3px 3px,
        #f57536 4px 4px;
}

ul, p {
    padding: 1em;
}

/* The CSS part of the procedural single div cloud stuff */
/* Fair warning; these clouds hate your CPU and all it's little baby GPU cores. */
.cloud {
    border-radius: 50%;
    width: var(--cloud-size);
    height: calc( var(--cloud-size) * 0.5);
    position: absolute;
    top: 50vh;
    left: -100vw;
    /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
    z-index: 0;
    background-color: transparent;
}
.light {
    box-shadow: 100vw 0vw 2em 0px #FFF;
    filter: url(#cloud-light);
    animation-duration: var(--cloud-period);
    animation-name: drift;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    /* animation-timing-function: linear; */
}
.dim {
    filter: url(#cloud-dim);
    animation-name: dim-drift;
    animation-duration: var(--cloud-period);
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    /* animation-play-state: ; */
}
@keyframes drift {
    0% { box-shadow: 100vw 0vw 2em 0px var(--cloud-bright); }
    50% { box-shadow: 150vw 0vw 2em 0px var(--cloud-bright); }
    100% { box-shadow: 100vw 0vw 2em 0px var(--cloud-bright);
        /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
    }
}
@keyframes dim-drift {
    0% {
        box-shadow: 100vw 5vw 2em -60px var(--cloud-dim);
        /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
    }
    50% {
        box-shadow: 150vw 5vw 2em -60px var(--cloud-dim);
        /* left: calc( -50vw + var(--cloud-size) ); */
    }
    100% { box-shadow: 100vw 5vw 2em -60px var(--cloud-dim); }
}

textPath {
    fill : #ffee96;
}
path {
    fill: none;
    stroke: #ffee96;
}
/* section {
    max-width: 40rem;
    padding: 2rem;
    margin: auto;
    padding-bottom: 0;
}  */
/* thanks jrl.ninja*/

